fix: add margin to intro container to show page heading on mobile devices

--- a/less/introduction/index.less
+++ b/less/introduction/index.less
@@ -3,7 +3,7 @@
 
 .introduction-container {
   max-width: 790px;
-  margin: 0 auto;
+  margin: 128px auto;
 
   a {
     transition: border 0.2s ease-in-out;
